# telentfy

./: .env.example  .pre-commit-config.yaml  .tool-versions  README.md  pyproject.toml
.github/workflows/: build-and-publish.yaml  build.yaml  pre-commit.yaml
src/telentfy/: __init__.py  cli.py  notifier.py  settings.py
telentfy/: __init__.py
