[tool.poetry]
description = "Library for sending simple text notifications to ntfy.sh and Telegram channels."
authors = ["ljbcloud <206458089+ljbcloud@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
aiohttp = "^3.11.11"
pydantic-settings = "^2.7.0"
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
invoke = "^2.2.0"
isort = "^6.0.1"
pytest = "^8.3.3"
ruff = "^0.11.6"
mypy = "^1.3.0"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.ruff]
# enable pyflakes `E` and `F` codes by default
select = ["E", "F"]
ignore = ["E501", "E741"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
name = "telentfy"
version = "0.1.0"
